# mcp-system-monitor

./: LICENSE  README.md  mcp_system_monitor_server.py  pyproject.toml  pytest.ini  requirements.txt  server_config_example.json  start_mcp_system_monitor.sh  start_mpc_system_monitor.bat
tests/: README.md  conftest.py  test_architecture_agnostic.py  test_mcp_server_integration.py  test_mcp_system_monitor_server.py  test_mcp_system_monitor_server_comprehensive.py
